--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "apollo-server-micro": "^2.15.1",
     "bcrypt": "^5.0.0",
     "cookie": "^0.4.1",
+    "dotenv": "^16.0.3",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.12",
     "knex": "^0.21.2",
     "micro-cors": "^0.1.1",
     "mysql": "^2.18.1",
     "next": "^12.1.0",
+    "next-env": "^1.1.1",
+    "pg": "^8.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.10.0",
